--- a/No.1/src/jupyter.ipynb
+++ b/No.1/src/jupyter.ipynb
@@ -24,6 +24,10 @@
     "source": [
      "import pandas as pd\n",
      "\n",
+     "print(\"Hello World!\")\n",
+     "\n",
+     "print(\"a\")\n",
+     "\n",
      "\n",
      "\n"
     ],
